[package]
name = "horst"
version = "0.1.2"
authors = ["anonymous"]
edition = "2021"

[dependencies]
tokio = { version = "^1.16.1", features = ["rt","rt-multi-thread","io-util","time","macros","sync","fs"] }
log = "^0.4"
bitflags = "^1.3"
async-trait = "^0.1"
pretty_env_logger = "0.4"
rand = "0.8"
memmap = "^0.7"
